# Fdm-Stencil-Expressions

./: .gitignore  CMakeLists.txt  PyFds.pyd  README.md  benchmarks_main  main.cpp  main2.cpp  main3.cpp  main4.cpp  main5.cpp  main6.cpp  main7.cpp  notes.txt  plots.ipynb  pybind_test.ipynb  test.cpp  tests.cpp
Bindings/: CMakeLists.txt  CvecDiffuseReac.cpp  PyFds.cpp  PyPdeBase1D.hpp  Wave2D.hpp
DiffOps/: All.hpp  BoundaryCond.hpp  CMakeLists.txt  DiffOpBase.hpp  FdmPlugin.hpp  Solver1D.hpp  Traits.hpp
DiffOps/BCs/: Dirichlet.hpp  Neumann.hpp  Robin.hpp
DiffOps/CoeffOps/: AutonomousCoeff.hpp  CoeffOpBase.hpp  TCoeff.hpp  TimeDepCoeff.hpp
DiffOps/DiffOps/: NthDerivOp.hpp  experimental_NthDerivOp.hpp
DiffOps/Utilities/: FillStencil.hpp  SparseDiagExpr.hpp  make_diagonal.hpp
DiffOps/benchmarks/: benchmarks.cpp
DiffOps/include/DiffOps/: DiffOpBase.hpp  DiffOpExpr.hpp  DiffOpTraits.hpp  DirectionalDiffOpBase.hpp  NthPartialDeriv.hpp
DiffOps/include/DiffOps/OneDim/: DiffOpTraits.hpp  NthDerivOp.hpp
DiffOps/tests/: tests.cpp
FDStencils/: BoundaryCond.hpp  CoeffOpBase.hpp  FdmPlugin.hpp  Solver1D.hpp
FDStencils/BCs/: BCPair.hpp  Robin.hpp
FDStencils/CoeffOps/: AutonomousCoeff.hpp  TimeDepCoeff.hpp
FDStencils/DiffOps/: NthDerivOp.hpp
FDStencils/include/FDStencils/: All.hpp  BoundaryCond.hpp  CoeffOpBase.hpp  FdmPlugin.hpp  Solver1D.hpp
FDStencils/include/FDStencils/BCs/: BCLeftRight.hpp  Neumann.hpp  Robin.hpp
FDStencils/include/FDStencils/CoeffOps/: AutonomousCoeff.hpp  TimeDepCoeff.hpp
FDStencils/include/FDStencils/DiffOps/: NthDerivOp.hpp
FDStencils/tests/: tests.cpp
FDStencilsXD/: All.hpp  BoundaryCondXD.hpp  CMakeLists.txt  CoeffOpBaseXD.hpp  FdmPluginXD.hpp  SolverXD.hpp
FDStencilsXD/BCs/: BCListXD.hpp
FDStencilsXD/CoeffOps/: AutonomousCoeffXD.hpp  TimeDepCoeffXD.hpp
FDStencilsXD/DiffOps/: DirectionalNthDerivOp.hpp
FDStencilsXD/include/FDStencilsXD/: All.hpp  BoundaryCondXD.hpp  CoeffOpBaseXD.hpp  FdmPluginXD.hpp  SolverXD.hpp
FDStencilsXD/include/FDStencilsXD/BCs/: BCListXD.hpp
FDStencilsXD/include/FDStencilsXD/CoeffOps/: AutonomousCoeffXD.hpp  TimeDepCoeffXD.hpp
FDStencilsXD/include/FDStencilsXD/DiffOps/: DirectionalNthDerivOp.hpp
FdStencils/: All.hpp  BoundaryCond.hpp  CMakeLists.txt  CoeffOpBase.hpp  FdmPlugin.hpp  Interp1D.hpp  Solver1D.hpp
FdStencils/BCs/: BCLeftRight.hpp  BCPair.hpp  Dirichlet.hpp  Neumann.hpp  Robin.hpp
FdStencils/CoeffOps/: AutonomousCoeff.hpp  TimeDepCoeff.hpp
FdStencils/DiffOps/: NthDerivOp.hpp
FdStencils/benchmarks/: benchmarks.cpp
FdStencils/tests/: tests.cpp
LhsExpressions/: All.hpp  CoeffMultExpr.hpp  GeneralSolver.hpp  LhsBase.hpp  LhsCoeffMultExpr.hpp  LhsExecutor.hpp  LhsSumExpr.hpp  LhsTimeExpr.hpp  NthTimeDeriv.hpp  SumExpr.hpp  TimeDerivBase.hpp
LinOps/: All.hpp  CMakeLists.txt  Discretization.hpp  LinOpExpr.hpp  LinOpTraits.hpp  LinearOpBase.hpp  Mesh.hpp  experimental_LinOpExpr.hpp  lin_op_tests.cpp
LinOps/Operators/: IOp.hpp  RandLinOp.hpp
LinOps/include/LinOps/: All.hpp  CoeffOpMixIn.hpp  Discretization.hpp  DiscretizationXD.hpp  LinOpExpr.hpp  LinOpMixIn.hpp  LinOpTraits.hpp  LinearOpBase.hpp  Mesh.hpp  MeshXD.hpp  Vector.hpp  VectorXD.hpp
LinOps/include/LinOps/Operators/: DirectionalRandOp.hpp  IOp.hpp  RandLinOp.hpp
LinOps/include/LinOps/Operators/CoeffOps/: AutonomousCoeff.hpp  TimeDepCoeff.hpp
LinOps/include/LinOps/Operators/DiffOps/: DirectionalNthDerivOp.hpp  NthDerivOp.hpp  experimental_NthDerivOp.hpp
LinOps/tests/: tests.cpp
LinOpsXD/: All.hpp  BoundaryCondXD.hpp  CMakeLists.txt  DiscretizationXD.hpp  LinOpExprXD.hpp  LinOpTraitsXD.hpp  LinOpXDTraits.hpp  LinearOpBaseXD.hpp  LinearOpXDBase.hpp  MeshXD.hpp
LinOpsXD/OperatorsXD/: DirectionalRandOp.hpp  IOpXD.hpp
LinOpsXD/include/LinOpsXD/: DiscretizationXD.hpp  LinOpTraitsXD.hpp  LinearOpBaseXD.hpp  MeshXD.hpp
LinOpsXD/include/LinOpsXD/OperatorsXD/: DirectionalRandOp.hpp
LinOpsXD/tests/: tests.cpp
OutsideSteps/include/OutsideSteps/: All.hpp  OStepBase.hpp  SetTimeOStep.hpp
OutsideSteps/include/OutsideSteps/BoundaryConds1D/: BCPair.hpp  DirichletBC.hpp  NeumannBC.hpp  RobinBC.hpp
OutsideSteps/include/OutsideSteps/BoundaryCondsXD/: BCList.hpp
TExprs/: All.hpp  CMakeLists.txt  CoeffMultExpr.hpp  GenInterp.hpp  GenSolver.hpp  NthTimeDeriv.hpp  SumExpr.hpp  TExprExecutor.hpp  TimeDerivBase.hpp
TExprs/include/TExprs/: All.hpp  CoeffMultExpr.hpp  GenInterp.hpp  GenSolver.hpp  TExprExecutor.hpp  TimeDerivBase.hpp
TExprs/tests/: tests.cpp
Utilities/: BumpFunc.hpp  FillStencil.hpp  FornbergCalc.hpp  MemView.hpp  PrintVec.hpp  SparseDiagExpr.hpp  StrideIterator.hpp
Utilities/include/Utilities/: BlockDiagExpr.hpp  BumpFunc.hpp  Fornberg.hpp  HighDimExpr.hpp  PrintVec.hpp
benchmarks/: benchmarks.cpp
incl/: All.hpp  BoundaryCond.hpp  FdmPlugin.hpp  Traits.hpp
incl/BCs/: Dirichlet.hpp
incl/CoeffOps/: AutonomousCoeff.hpp  CoeffOp.hpp  CoeffOpBase.hpp  TCoeff.hpp  TOp.hpp
incl/DiffOps/: CoeffOp.hpp  NthDerivOp copy.hpp  NthDerivOp.hpp
incl/Utilities/: Fornberg.hpp  FornbergCalc.hpp
tests/: CMakeLists.txt  tests.cpp  tests_fdstencils.cpp  tests_linops.cpp  tests_linopsxd.cpp  tests_pybind.ipynb  tests_texprs.cpp  tests_wave2D.ipynb
